@startuml DesignClassDiagram_NutritionPlan

hide empty members
skinparam classAttributeIconSize 0

' Lớp Giao diện (Boundary)
package "Giao diện (Boundary)" {
    class NutritionPlanManagementUI {
        - currentUserId: String
        - currentPlanId: String
        + displayPlans(plans: List<NutritionPlan>)
        + displayPlanDetails(plan: NutritionPlan)
        + showPlanCreationForm()
        + submitNewPlan(): NutritionPlan
    }
}

' Lớp Điều khiển (Control)
package "Điều khiển (Control)" {
    class NutritionPlanController {
        - nutritionPlanService: NutritionPlanService
        + handleShowPlans(userId: String)
        + handleShowPlanDetails(planId: String)
        + handleCreatePlan(planData: Object)
    }
}

' Lớp Dịch vụ (Service)
package "Dịch vụ (Service)" {
    interface NutritionPlanService {
        + getPlansForUser(userId: String): List<NutritionPlan>
        + getPlanDetails(planId: String): NutritionPlan
        + createNewPlan(userId: String, plan: NutritionPlan): NutritionPlan
    }
}

' Lớp Truy cập Dữ liệu (DAO)
package "Truy cập Dữ liệu (DAO)" {
    interface NutritionPlanDAO {
        + findByUser(userId: String): List<NutritionPlan>
        + findById(planId: String): NutritionPlan
        + save(plan: NutritionPlan): NutritionPlan
    }
    interface DailyMenuDAO {
        + findByPlan(planId: String): List<DailyMenu>
    }
    interface MealDAO {
        + findByMenu(menuId: String): List<Meal>
    }
    interface FoodItemDAO {
        + findById(foodId: String): FoodItem
    }
}

' Lớp Thực thể (Entity)
package "Thực thể (Entity)" {
    class User {
      username: String
    }

    class NutritionPlan {
      planId: String
      planName: String
      startDate: Date
      endDate: Date
      nutritionGoal: String
    }

    class DailyMenu {
      menuId: String
      date: Date
    }

    class Meal {
      mealId: String
      mealType: String
      time: Time
    }

    class FoodItem {
      foodId: String
      name: String
      calories: Integer
    }
    
    class MealFoodItem {
        quantity: Float
        unit: String
    }
}

' Định nghĩa các mối quan hệ
NutritionPlanManagementUI ..> NutritionPlanController : uses

NutritionPlanController ..> NutritionPlanService : uses

NutritionPlanService ..> NutritionPlanDAO : uses
NutritionPlanService ..> DailyMenuDAO : uses
NutritionPlanService ..> MealDAO : uses

NutritionPlanDAO ..> NutritionPlan : manages
DailyMenuDAO ..> DailyMenu : manages
MealDAO ..> Meal : manages
FoodItemDAO ..> FoodItem : manages

User "1" -- "0..*" NutritionPlan : creates
NutritionPlan "1" *-- "1..*" DailyMenu : contains
DailyMenu "1" *-- "1..*" Meal : includes
Meal "1" -- "1..*" MealFoodItem : consists of
FoodItem "1" -- "1..*" MealFoodItem : is part of

@enduml
